add allowed origins and application name configuration